--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -10,6 +10,8 @@
     to deal with it yet!
   */
   margin-bottom: 32px;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .title {
@@ -23,4 +25,12 @@
   font-size: 0.875rem;
   font-weight: 400;
   color: hsl(0deg, 0%, 30%);
+}
+
+@media screen and (max-width: 799px) {
+  .controlPane {
+    margin-right: 50px;
+    display: inline-block;
+    margin-bottom: 0;
+  }
 }
